--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>颱風租屋網</title>
-  <link rel="stylesheet" type="text/css" href="css/pagecss.css">
-  <script type="text/javascript" src="js/pagejs.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/typhoon.css">
+  <script type="text/javascript" src="js/typhoon.js"></script>
 </head>
 <body bgcolor="#FFFFBB">
   <!-- <div class="box">
