--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <title>颱風租屋網</title>
   <link rel="stylesheet" type="text/css" href="css/typhoon.css">
-  <script type="text/javascript" src="js/typhoon.js"></script>
+  <script type="text/javascript" async href="js/typhoon.js"></script>
 </head>
 <body bgcolor="#FFFFBB">
   <!-- <div class="box">
